--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -1,12 +1,19 @@
 {
-  "heroTitle": "可扩展的低代码 UI 框架",
-  "heroDesc": "Sunmao(榫卯 suənmɑʊ)是一个带有运行时和编辑器的开源低代码框架。轻松集成任何自定义UI组件，让你的UI组件库享受低代码的便利。",
+  "heroTitle": "低代码工具的框架",
+  "heroDesc": "Sunmao(榫卯 suənmɑʊ)是一个低代码工具的开源框架。你可以在 Sunmao 中集成自定义 UI 组件，创建属于自己的低代码工具。",
   "heroButtonText": "立即体验",
-  "sunmaoFeatures": "您需要的低代码功能，Sunmao 全都有……",
+  "sunmaoExperienceTitle": "用 Sunmao 开发一个日程管理应用是什么样的体验？",
+  "sunmaoDay1Title": "Day 1: 创建日程管理 UI 界面",
+  "sunmaoDay1Desc": "借助强大的 Sunmao 编辑器，你可以轻松编排出一个完整的表单和表格。看起来不错，不过，这仅仅是个开始。",
+  "sunmaoDay2Title": "Day 2: 封装一个日历组件来替换表格",
+  "sunmaoDay2Desc": "在这个场景，日历组件比表格更合适，但低代码工具往往不会内置日历组件。好在 Sunmao 原生支持封装自定义组件。你可以在 Github 上找一个喜欢的日历组件，把它封装成一个 Sunmao 组件，只需写一些简单代码就能搞定。",
+  "sunmaoDay3Title": "Day 3: 用日历组件替换表格组件",
+  "sunmaoDay3Desc": "封装过的日历组件可以直接集成到 Sunmao 编辑器中，替换掉表格组件，并且使用体验和预置组件别无二致。借助自定义组件，你可以渐进式开发，持续迭代更新你的应用。",
+  "sunmaoFeatures": "你需要的低代码功能，Sunmao 全都有……",
   "featureExtensibleTitle": "灵活的可扩展性",
-  "featureExtensibleDesc": "无论是组件，还是逻辑，甚至是编辑器本身，都是可扩展的。也就是说，您可以在低代码工具中，使用您自己的组件库了。",
+  "featureExtensibleDesc": "无论是组件，还是逻辑，甚至是编辑器本身，都是可扩展的。你的低代码工具，由你做主。",
   "featureEditorTitle": "强大的可视化编辑器",
-  "featureEditorDesc": "Sunmao 提供了功能强大且完善可视化低代码编辑器，无需编程基础，并且编辑器本身也是可扩展的。",
+  "featureEditorDesc": "Sunmao 提供了功能强大且完善图形化低代码编辑器，无需编程基础即可使用。",
   "featureTypeSafeTitle": "类型安全",
-  "featureTypeSafeDesc": "无论是在组件开发过程中，还是使用低代码编辑器的过程中，都能享受类型自动推断和补全。"
+  "featureTypeSafeDesc": "无论是在开发组件过程中，还是使用编辑器的过程中，都能享受类型自动推断和补全。"
 }
