--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -1,14 +1,14 @@
 {
   "heroTitle": "开发低代码工具的框架",
-  "heroDesc": "Sunmao(榫卯 suənmɑʊ)是一个低代码工具的开源框架。你可以在 Sunmao 中集成自定义 UI 组件，创建属于自己的低代码工具。",
+  "heroDesc": "Sunmao(榫卯)是一个低代码工具的开源框架。你可以在 Sunmao 中集成自定义 UI 组件，创建属于自己的低代码工具。",
   "heroButtonText": "立即体验",
   "sunmaoExperienceTitle": "如何用 Sunmao 渐进式地开发一个日程管理应用？",
-  "sunmaoDay1Title": "Day 1: 创建日程管理 UI 界面",
+  "sunmaoDay1Title": "Step 1: 创建日程管理 UI 界面",
   "sunmaoDay1Desc": "借助 Sunmao 编辑器，你可以轻松编排出一个完整的表单和表格。看起来不错，不过，这仅仅是个开始。",
-  "sunmaoDay2Title": "Day 2: 封装一个日历组件来替换表格",
+  "sunmaoDay2Title": "Step 2: 封装一个日历组件来替换表格",
   "sunmaoDay2Desc": "日历组件比表格更适合展示日程，但一般的低代码工具内置的组件有限，缺乏日历组件，也无法扩展。Sunmao 生来就为解决这类问题。原生支持封装自定义组件。只需一些代码，你就能把一个现成的日历组件封装成 Sunmao 组件。",
-  "sunmaoDay3Title": "Day 3: 用日历组件替换表格组件",
-  "sunmaoDay3Desc": "封装好的 Sunmao 日历组件可以直接集成到 Sunmao 编辑器中，替换掉表格组件，并且使用体验和预置组件别无二致。借助自定义组件，你可以渐进式开发，持续丰富你的组件库，并迭代你的应用",
+  "sunmaoDay3Title": "Step 3: 用日历组件替换表格组件",
+  "sunmaoDay3Desc": "封装好的 Sunmao 日历组件可以直接集成到 Sunmao 编辑器中，替换掉表格组件，并且使用体验和预置组件别无二致。借助自定义组件，你可以渐进式开发，持续丰富你的组件库，并迭代你的应用.",
   "sunmaoFeatures": "你需要的低代码功能，Sunmao 全都有……",
   "featureExtensibleTitle": "灵活的可扩展性",
   "featureExtensibleDesc": "无论是组件，还是逻辑，甚至是编辑器本身，都是可扩展的。你的低代码工具，由你做主。",
